Sample tests done